add some new pages
added and delete some pages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 </head>
 
-<body class="style-games">
+<body class="style-games style-home">
 
     <!-- Preloader -->
     <div class="loader-mask">
@@ -194,17 +194,7 @@
 
                                     </ul>
                                 </li>
-                                <li class="nav__dropdown">
-                                    <a href="">APPs</a>
-                                    <ul class="nav__dropdown-menu">
-                                        <li><a href="">Dating</a></li>
-                                        <li><a href="">Photo &amp; Video</a></li>
-                                        <li><a href="">Kids</a></li>
-                                        <li><a href="">Entertainment</a></li>
-                                        <li><a href="">Productivity</a></li>
-
-                                    </ul>
-                                </li>
+                                
                                 <li class="nav__dropdown">
                                     <a href="">Gaming</a>
                                     <ul class="nav__dropdown-menu">
@@ -539,7 +529,7 @@
                                     <div class="entry__body">
                                         <div class="entry__header">
                                             <h2 class="entry__title">
-                                                <a href="single-post.html">Best APPs To Clean iPhone</a>
+                                                <a href="single-post.html">Best APPs To Clean iPhone &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                                             </h2>
                                             <ul class="entry__meta">
                                                 <li class="entry__meta-author">
@@ -624,7 +614,7 @@
                                     <div class="entry__body">
                                         <div class="entry__header">
                                             <h2 class="entry__title">
-                                                <a href="single-post.html">Zoom VS Google Hangouts</a>
+                                                <a href="single-post.html">Zoom VS Google Hangouts &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                                             </h2>
                                             <ul class="entry__meta">
                                                 <li class="entry__meta-author">
@@ -1316,4 +1306,6 @@
     <script src="js/modernizr.min.js"></script>
     <script src="js/scripts.js"></script>
 
-</body></html>
+</body>
+
+</html>
