added some new pages

--- a/sub-categories.html
+++ b/sub-categories.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>TopAppReview | Home</title>
+    <title>TopAppReview | How To</title>
 
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
