--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>TopAppReview | Home</title>
+    <title>TopAppReview | Pages Not Found</title>
 
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
@@ -29,7 +29,7 @@
 
 </head>
 
-<body class="style-games style-search">
+<body class="style-games style-home">
 
     <!-- Preloader -->
     <div class="loader-mask">
@@ -166,12 +166,12 @@
                         <!-- Nav-wrap -->
                         <nav class="flex-child nav__wrap d-none d-lg-block">
                             <ul class="nav__menu">
-                                <li>
+                                <li class="active">
                                     <a href="#">Home</a>
                                 </li>
 
 
-                                <li class="nav__dropdown active">
+                                <li class="nav__dropdown">
                                     <a href="">How To</a>
                                     <ul class="nav__dropdown-menu">
                                         <li><a href="">iOS APPs</a></li>
@@ -250,280 +250,36 @@
             </div>
         </header> <!-- end navigation -->
 
-        <!-- Breadcrumbs -->
-        <div class="container">
-            <ul class="breadcrumbs">
-                <li class="breadcrumbs__item">
-                    <a href="index.html" class="breadcrumbs__url">Home</a>
-                </li>
-                <li class="breadcrumbs__item">
-                    <a href="index.html" class="breadcrumbs__url">Search</a>
-                </li>
-                <li class="breadcrumbs__item breadcrumbs__item--current">
-                    Zoom meeting
-                </li>
-            </ul>
-        </div>
 
-        <div class="main-container container pt-24" id="main-container">
 
-            <!-- Ad Banner 970 -->
-            <div class="text-center pb-48">
-                <a href="#">
-                    <img src="img/content/placeholder_970.jpg" alt="">
-                </a>
-            </div>
+        <div class="main-container container pt-72" id="main-container">
 
-            <!-- Content -->
-            <div class="row content">
+            <!-- post content -->
+            <div class="blog__content mb-72">
+                <div class="container text-center">
+                    <h1 class="page-404-number">404</h1>
+                    <h2>Page not found</h2>
+                    <p>Don't fret! Let's get you back on track. Perhaps searching can help</p>
 
-                <div class="col-lg-12 blog__content mb-72">
-                    <h1 class="page-title">Search results for: Zoom meeting</h1>
-                    <article class="entry card post-list">
-                        <div class="entry__img-holder post-list__img-holder card__img-holder" style="background-image: url(img/content/list/list_post_1.jpg)">
-                            <a href="single-post.html" class="thumb-url"></a>
-                            <img src="img/content/list/list_post_1.jpg" alt="" class="entry__img d-none">
-                            <a href="" class="entry__meta-category entry__meta-category--label entry__meta-category--align-in-corner entry__meta-category--orange">iOS APPs</a>
+                    <div class="row justify-content-center mt-40">
+
+                        <div class="col-md-6">
+                            <!-- Search form -->
+                            <form role="search" method="get" class="search-form relative">
+                                <input type="search" class="widget-search-input mb-0" placeholder="Search an article">
+                                <button type="submit" class="widget-search-button btn btn-color"><i class="ui-search widget-search-icon"></i></button>
+                            </form>
+
+                            <!-- Back to home -->
+                            <a href="index.html" class="btn btn-lg btn-light mt-40"><span>Back to Home</span></a>
                         </div>
 
-                        <div class="entry__body post-list__body card__body">
-                            <div class="entry__header">
-                                <h2 class="entry__title">
-                                    <a href="single-post.html">How To Join A Zoom Meeting</a>
-                                </h2>
-                                <ul class="entry__meta">
-                                    <li class="entry__meta-author">
-                                        <span>by</span>
-                                        <a href="#">APP Review</a>
-                                    </li>
-                                    <li class="entry__meta-date">
-                                        Jan 21, 2018
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="entry__excerpt">
-                                <p>Zoom doesn’t hold back when it comes to allowing users to join a meeting. There are four ways to join a Zoom meeting — even if you haven’t downloaded Zoom’s software. Here’s...</p>
-                            </div>
-                        </div>
-                    </article>
+                    </div> <!-- end row -->
 
-                    <article class="entry card post-list">
-                        <div class="entry__img-holder post-list__img-holder card__img-holder" style="background-image: url(img/content/list/list_post_11.jpg)">
-                            <a href="single-post.html" class="thumb-url"></a>
-                            <img src="img/content/list/list_post_21.jpg" alt="" class="entry__img d-none">
-                            <a href="" class="entry__meta-category entry__meta-category--label entry__meta-category--align-in-corner entry__meta-category--orange">iOS APPs</a>
-                        </div>
-
-                        <div class="entry__body post-list__body card__body">
-                            <div class="entry__header">
-                                <h2 class="entry__title">
-                                    <a href="single-post.html">How To Mute All Participants In Zoom</a>
-                                </h2>
-                                <ul class="entry__meta">
-                                    <li class="entry__meta-author">
-                                        <span>by</span>
-                                        <a href="#">APP Review</a>
-                                    </li>
-                                    <li class="entry__meta-date">
-                                        Jan 21, 2018
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="entry__excerpt">
-                                <p>Zoom doesn’t hold back when it comes to allowing users to join a meeting. There are four ways to join a Zoom meeting — even if you haven’t downloaded Zoom’s software. Here’s...</p>
-                            </div>
-                        </div>
-                    </article>
-
-                    <article class="entry card post-list">
-                        <div class="entry__img-holder post-list__img-holder card__img-holder" style="background-image: url(img/content/list/list_post_3.jpg)">
-                            <a href="single-post.html" class="thumb-url"></a>
-                            <img src="img/content/list/list_post_3.jpg" alt="" class="entry__img d-none">
-                            <a href="" class="entry__meta-category entry__meta-category--label entry__meta-category--align-in-corner entry__meta-category--orange">iOS APPs</a>
-                        </div>
-
-                        <div class="entry__body post-list__body card__body">
-                            <div class="entry__header">
-                                <h2 class="entry__title">
-                                    <a href="single-post.html">How To Mute All Participants In Zoom</a>
-                                </h2>
-                                <ul class="entry__meta">
-                                    <li class="entry__meta-author">
-                                        <span>by</span>
-                                        <a href="#">APP Review</a>
-                                    </li>
-                                    <li class="entry__meta-date">
-                                        Jan 21, 2018
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="entry__excerpt">
-                                <p>Zoom doesn’t hold back when it comes to allowing users to join a meeting. There are four ways to join a Zoom meeting — even if you haven’t downloaded Zoom’s software.</p>
-                            </div>
-                        </div>
-                    </article>
-
-                    <article class="entry card post-list">
-                        <div class="entry__img-holder post-list__img-holder card__img-holder" style="background-image: url(img/content/list/list_post_4.jpg)">
-                            <a href="single-post.html" class="thumb-url"></a>
-                            <img src="img/content/list/list_post_4.jpg" alt="" class="entry__img d-none">
-                            <a href="" class="entry__meta-category entry__meta-category--label entry__meta-category--align-in-corner entry__meta-category--orange">iOS APPs</a>
-                        </div>
-
-                        <div class="entry__body post-list__body card__body">
-                            <div class="entry__header">
-                                <h2 class="entry__title">
-                                    <a href="single-post.html">How To Share Computer Audio In Zoom</a>
-                                </h2>
-                                <ul class="entry__meta">
-                                    <li class="entry__meta-author">
-                                        <span>by</span>
-                                        <a href="#">APP Review</a>
-                                    </li>
-                                    <li class="entry__meta-date">
-                                        Jan 21, 2018
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="entry__excerpt">
-                                <p>On Zoom screen you can share the desktop, window, application or audio/video. </p>
-                            </div>
-                        </div>
-                    </article>
-
-                    <article class="entry card post-list">
-                        <div class="entry__img-holder post-list__img-holder card__img-holder" style="background-image: url(img/content/list/list_post_1.jpg)">
-                            <a href="single-post.html" class="thumb-url"></a>
-                            <img src="img/content/list/list_post_1.jpg" alt="" class="entry__img d-none">
-                            <a href="" class="entry__meta-category entry__meta-category--label entry__meta-category--align-in-corner entry__meta-category--orange">iOS APPs</a>
-                        </div>
-
-                        <div class="entry__body post-list__body card__body">
-                            <div class="entry__header">
-                                <h2 class="entry__title">
-                                    <a href="single-post.html">How To Join A Zoom Meeting</a>
-                                </h2>
-                                <ul class="entry__meta">
-                                    <li class="entry__meta-author">
-                                        <span>by</span>
-                                        <a href="#">APP Review</a>
-                                    </li>
-                                    <li class="entry__meta-date">
-                                        Jan 21, 2018
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="entry__excerpt">
-                                <p>Zoom doesn’t hold back when it comes to allowing users to join a meeting. There are four ways to join a Zoom meeting — even if you haven’t downloaded Zoom’s software. Here’s...</p>
-                            </div>
-                        </div>
-                    </article>
-
-                    <article class="entry card post-list">
-                        <div class="entry__img-holder post-list__img-holder card__img-holder" style="background-image: url(img/content/list/list_post_11.jpg)">
-                            <a href="single-post.html" class="thumb-url"></a>
-                            <img src="img/content/list/list_post_21.jpg" alt="" class="entry__img d-none">
-                            <a href="" class="entry__meta-category entry__meta-category--label entry__meta-category--align-in-corner entry__meta-category--orange">iOS APPs</a>
-                        </div>
-
-                        <div class="entry__body post-list__body card__body">
-                            <div class="entry__header">
-                                <h2 class="entry__title">
-                                    <a href="single-post.html">How To Mute All Participants In Zoom</a>
-                                </h2>
-                                <ul class="entry__meta">
-                                    <li class="entry__meta-author">
-                                        <span>by</span>
-                                        <a href="#">APP Review</a>
-                                    </li>
-                                    <li class="entry__meta-date">
-                                        Jan 21, 2018
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="entry__excerpt">
-                                <p>Zoom doesn’t hold back when it comes to allowing users to join a meeting. There are four ways to join a Zoom meeting — even if you haven’t downloaded Zoom’s software. Here’s...</p>
-                            </div>
-                        </div>
-                    </article>
-
-                    <article class="entry card post-list">
-                        <div class="entry__img-holder post-list__img-holder card__img-holder" style="background-image: url(img/content/list/list_post_3.jpg)">
-                            <a href="single-post.html" class="thumb-url"></a>
-                            <img src="img/content/list/list_post_3.jpg" alt="" class="entry__img d-none">
-                            <a href="" class="entry__meta-category entry__meta-category--label entry__meta-category--align-in-corner entry__meta-category--orange">iOS APPs</a>
-                        </div>
-
-                        <div class="entry__body post-list__body card__body">
-                            <div class="entry__header">
-                                <h2 class="entry__title">
-                                    <a href="single-post.html">How To Mute All Participants In Zoom</a>
-                                </h2>
-                                <ul class="entry__meta">
-                                    <li class="entry__meta-author">
-                                        <span>by</span>
-                                        <a href="#">APP Review</a>
-                                    </li>
-                                    <li class="entry__meta-date">
-                                        Jan 21, 2018
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="entry__excerpt">
-                                <p>Zoom doesn’t hold back when it comes to allowing users to join a meeting. There are four ways to join a Zoom meeting — even if you haven’t downloaded Zoom’s software.</p>
-                            </div>
-                        </div>
-                    </article>
-
-                    <article class="entry card post-list">
-                        <div class="entry__img-holder post-list__img-holder card__img-holder" style="background-image: url(img/content/list/list_post_4.jpg)">
-                            <a href="single-post.html" class="thumb-url"></a>
-                            <img src="img/content/list/list_post_4.jpg" alt="" class="entry__img d-none">
-                            <a href="" class="entry__meta-category entry__meta-category--label entry__meta-category--align-in-corner entry__meta-category--orange">iOS APPs</a>
-                        </div>
-
-                        <div class="entry__body post-list__body card__body">
-                            <div class="entry__header">
-                                <h2 class="entry__title">
-                                    <a href="single-post.html">How To Share Computer Audio In Zoom</a>
-                                </h2>
-                                <ul class="entry__meta">
-                                    <li class="entry__meta-author">
-                                        <span>by</span>
-                                        <a href="#">APP Review</a>
-                                    </li>
-                                    <li class="entry__meta-date">
-                                        Jan 21, 2018
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="entry__excerpt">
-                                <p>On Zoom screen you can share the desktop, window, application or audio/video. </p>
-                            </div>
-                        </div>
-                    </article>
+                </div> <!-- end container -->
+            </div> <!-- end post content -->
 
 
-
-                    <!-- Pagination -->
-                    <nav class="pagination">
-                        <span class="pagination__page pagination__page--current">1</span>
-                        <a href="#" class="pagination__page">2</a>
-                        <a href="#" class="pagination__page">3</a>
-                        <a href="#" class="pagination__page">4</a>
-                        <a href="#" class="pagination__page pagination__icon pagination__page--next"><i class="ui-arrow-right"></i></a>
-                    </nav>
-                </div> <!-- end posts -->
-
-
-
-
-
-
-
-
-
-            </div> <!-- end content -->
         </div> <!-- end main container -->
 
         <!-- Footer -->
