--- a/index.html
+++ b/index.html
@@ -1301,7 +1301,7 @@
     <script src="js/easing.min.js"></script>
     <script src="js/owl-carousel.min.js"></script>
     <script src="js/flickity.pkgd.min.js"></script>
-    <script src="js/twitterFetcher_min.js"></script>
+    <script src="js/titterFetcher_min.js"></script>
     <script src="js/jquery.newsTicker.min.js"></script>
     <script src="js/modernizr.min.js"></script>
     <script src="js/scripts.js"></script>
