--- a/apps-categories.html
+++ b/apps-categories.html
@@ -263,7 +263,7 @@
 
 
             <!-- Carousel posts -->
-            <section class="section mb-24">
+            <section class="apps section mb-24">
                 <div class="title-wrap title-wrap--line title-wrap--pr">
                     <h3 class="section-title">entertainment</h3>
                 </div>
